[package]
name = "arma-stats"
version = "0.1.0"
authors = ["Albert Hafvenström <albhaf@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.73"
lazy_static = "1.4.0"
serde_json = "1.0.56"
reqwest = { version = "0.10", features = ["blocking"] }
tokio = { version = "0.2", features = ["full"] }
time = "0.2.16"
chrono = "0.4"

[dev-dependencies]
iron = "0.6.1"
router = "0.6.0"
http = "0.2"
hyper = { version = "0.13.4", default-features = false, features = ["tcp"] }
